--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Airbnb Clone</title>
 </head>
-<body>
-<header style="color:#FF0000;height:70px;width:100%;">
+<body style="min-height: 100vh; position: relative;margin: 0;padding: 0;"> 
+<header style="background-color:#FF0000;height:70px;width:100%;">
 </header>
-<footer style="color:#00FF00;height:60px;width:100%;text-align:center">Holberton School</footer>
+<section></section>
+<footer style="background-color:#00FF00;height:60px;width:100%;text-align:center;position: absolute;bottom: 0;"><span style="display: inline-block;vertical-align: middle;">Holberton School</span></footer>
 	
 </body>
 </html>
