--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -13,7 +13,7 @@
     <header>
     </header>
     <section></section>
-    <footer><span>Holberton School</span></footer>
+    <footer>Holberton School</footer>
 
 </body>
 
