--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -16,7 +16,7 @@
         <div class="logo"></div>
     </header>
     <section></section>
-    <footer><span>Holberton School</span></footer>
+    <footer>Holberton School</footer>
 
 </body>
 
