--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -8,7 +8,7 @@
 <header style="background-color:#FF0000;height:70px;width:100%;">
 </header>
 <section></section>
-<footer style="background-color:#00FF00;height:60px;width:100%;text-align:center;position: absolute;bottom: 0;"><span style="display: inline-block;vertical-align: middle;">Holberton School</span></footer>
+<footer style="background-color:#00FF00;height:60px;width:100%;text-align:center;position: absolute;bottom: 0;display: flex;align-items: center; justify-content: center;">Holberton School</footer>
 	
 </body>
 </html>
