--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -23,10 +23,9 @@
 			text-align:center;
 			position: absolute;
 			bottom: 0;
-		}
-		span {
-			display: inline-block;
-			vertical-align: middle;
+			display: flex;
+			align-items: center; 
+			justify-content: center;
 		}
 	</style>
 </head>
@@ -34,7 +33,7 @@
 <header>
 </header>
 <section></section>
-<footer><span>Holberton School</span></footer>
+<footer>Holberton School</footer>
 	
 </body>
 </html>
