--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Airbnb Clone</title>
@@ -10,30 +11,32 @@
 			margin: 0;
 			padding: 0;
 		}
+
 		header {
-			background-color:#FF0000;
-			height:70px;
-			width:100%;
+			background-color: #FF0000;
+			height: 70px;
+			width: 100%;
 		}
-		footer
-		{
-			background-color:#00FF00;
-			height:60px;
-			width:100%;
-			text-align:center;
+
+		footer {
+			background-color: #00FF00;
+			height: 60px;
+			width: 100%;
+			text-align: center;
 			position: absolute;
 			bottom: 0;
 			display: flex;
-			align-items: center; 
+			align-items: center;
 			justify-content: center;
 		}
 	</style>
 </head>
-<body> 
-<header>
-</header>
-<section></section>
-<footer>Holberton School</footer>
-	
+
+<body>
+	<header>
+	</header>
+	<footer>Holberton School</footer>
+
 </body>
+
 </html>
