--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Airbnb Clone</title>
-    <link rel="stylesheet" type="text/css" href="./styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="./styles/4-header.css">
-    <link rel="stylesheet" type="text/css" href="./styles/4-filters.css">
-    <link rel="stylesheet" type="text/css" href="./styles/4-footer.css">
-    <link rel="icon" href=./images/icon.png"> </head> <body>
-    <header>
-        <div class="logo"></div>
-    </header>
-    <div class="container">
-            <section class="filters">
-                <button>Search</button>
-            </section>
-            
+    <head>
+        <meta charset="UTF-8">
+        <title>Airbnb Clone</title>
+        <link rel="stylesheet" type="text/css" href="./styles/4-common.css">
+        <link rel="stylesheet" type="text/css" href="./styles/3-header.css">
+        <link rel="stylesheet" type="text/css" href="./styles/4-filters.css">
+        <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
+        <link rel="icon" href=./images/icon.png">
+    </head>
+    <body>
+        <header>
+            <div class="logo"></div>
+        </header>
+        <div class="container">
+                <section class="filters">
+                    <button>Search</button>
+                </section>
+                
 
-    </div>
+        </div>
 
-    <footer><span>Holberton School</span></footer>
+        <footer>Holberton School</footer>
 
     </body>
 
