update for task 8

--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -8,20 +8,23 @@
     <link rel="stylesheet" type="text/css" href="./styles/3-header.css">
     <link rel="stylesheet" type="text/css" href="./styles/5-filters.css">
     <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
-    <link rel="icon" href=./images/icon.png"> </head> <body>
+    <link rel="icon" href="./images/icon.png">
+</head>
+
+<body>
     <header>
         <div class="logo"></div>
     </header>
     <div class="container">
         <section class="filters">
-                <div class="locations">
-                    <h3>States</h3>
-                    <h4>California, Florida, New York...</h4>
-                </div>
-                <div class="amenities">
-                    <h3>Amenities</h3>
-                    <h4>Internet, Kitchen...</h4>
-                </div>
+            <div class="locations">
+                <h3>States</h3>
+                <h4>California, Florida, New York...</h4>
+            </div>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <h4>Internet, Kitchen...</h4>
+            </div>
             <button>Search</button>
         </section>
 
@@ -30,6 +33,6 @@
 
     <footer>Holberton School</footer>
 
-    </body>
+</body>
 
 </html>
