--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" type="text/css" href="./styles/3-header.css">
     <link rel="stylesheet" type="text/css" href="./styles/6-filters.css">
     <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
-    <link rel="icon" href=./images/icon.png"> </head> <body>
+    <link rel="icon" href="./images/icon.png">
+</head>
+
+<body>
     <header>
         <div class="logo"></div>
     </header>
@@ -53,6 +56,6 @@
 
     <footer>Holberton School</footer>
 
-    </body>
+</body>
 
 </html>
