--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" type="text/css" href="./styles/6-filters.css">
     <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
     <link rel="stylesheet" type="text/css" href="./styles/7-places.css">
-    <link rel="icon" href=./images/icon.png"> </head> <body>
+    <link rel="icon" href="./images/icon.png">
+</head>
+
+<body>
     <header>
         <div class="logo"></div>
     </header>
@@ -75,6 +78,6 @@
 
     <footer>Holberton School</footer>
 
-    </body>
+</body>
 
 </html>
